# cookiecutter-pypackage

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cookiecutter.json  copilot-instructions.md  pyproject.toml  requirements_dev.txt
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: copilot-setup-steps.yml  tests.yml
docs/: prompts.rst
hooks/: post_gen_project.py  pre_gen_project.py
test_project/: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
test_project/.github/workflows/: python-app.yml  python-publish.yml
test_project/docs/: Makefile  conf.py  index.rst  make.bat
test_project/test_project/: __init__.py
test_project/tests/: __init__.py  test_test_project.py
tests/: test_bake_project.py  test_copilot_instructions.py  test_coverage.py
{{cookiecutter.project_slug}}/: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  copilot-instructions.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py
{{cookiecutter.project_slug}}/.github/workflows/: python-app.yml  python-publish.yml  update-template.yml
{{cookiecutter.project_slug}}/docs/: Makefile  conf.py  index.rst  make.bat
{{cookiecutter.project_slug}}/tests/: __init__.py  test_{{cookiecutter.namespace}}.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.namespace}}/: cli.py
