[tool.poetry]
name = "cookiecutter-pypackage"
version = "0.1.0"
description = ""
authors = ["Lucas Rangel Cezimbra <lucas.cezimbra@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.11"
cookiecutter = "^2.5.0"
pre-commit = "^3.6.0"
pytest = "^7.4.4"
pytest-cookies = "^0.7.0"

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E501"]
line-length = 88


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
