{%- set license_classifiers = {
    'GNU Lesser General Public License v2.1': 'License :: OSI Approved :: GNU Lesser General Public License v2 (LGPLv2)',
    'MIT license': 'License :: OSI Approved :: MIT License',
    'GNU General Public License v3': 'License :: OSI Approved :: GNU General Public License v3 (GPLv3)'
} %}
[project]
name="{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
keywords = ["{{ cookiecutter.project_slug }}"]
authors = [
  {name="{{ cookiecutter.full_name.replace('\"', '\\\"') }}", email="{{ cookiecutter.email }}"},
]
classifiers = [
  'Development Status :: 2 - Pre-Alpha',
  'Intended Audience :: Developers',
{%- if cookiecutter.open_source_license in license_classifiers %}
  '{{ license_classifiers[cookiecutter.open_source_license] }}',
{%- endif %}
  'Natural Language :: English',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.7',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
]
dependencies = []

[project.urls]
homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
documentation = "https://{{ cookiecutter.project_slug }}.readthedocs.io/"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
changelog = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/blob/main/CHANGELOG.md"

[project.optional-dependencies]
build = [
  "flit>=3.4"
]
docs = [
  "myst-parser==2.0.0",
  "Sphinx==7.2.6",
  "sphinx-rtd-theme==2.0.0",
]
test = [
  "black==24.3.0",
  "bump2version==1.0.1",
{% if cookiecutter.command_line_interface|lower == 'click' -%}
  "Click==8.1.3",{% endif -%}
  "coverage==7.4.4",
  "faker==24.7.1",
  "pre-commit==3.7.0",
  "pytest==8.1.1",
  "pytest-cov==5.0.0",
  "pytest-mock==3.14.0",
]

[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "{{ cookiecutter.project_slug }}"

[tool.flit.sdist]
include = ["LICENSE", "README.md"]
exclude = ["contrib", "docs", "test*"]

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--doctest-modules"

[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E501"]
line-length = 88
