[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_short_description }}"
readme = "README.md"
{%- if cookiecutter.open_source_license == 'MIT license' %}
license = "MIT"
{%- elif cookiecutter.open_source_license == 'GNU Lesser General Public License v2.1' %}
license = "LGPL-2.1-only"
{%- elif cookiecutter.open_source_license == 'GNU General Public License v3' %}
license = "GPL-3.0-only"
{%- endif %}
authors = [
  {name = "{{ cookiecutter.full_name.replace('\"', '\\\"') }}", email = "{{ cookiecutter.email }}"}
]
keywords = ["{{ cookiecutter.project_slug }}"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
{%- if cookiecutter.command_line_interface|lower == 'click' %}
  "Click>=8.1.3",
{%- endif %}
]

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
Documentation = "https://{{ cookiecutter.project_slug }}.readthedocs.io/"
Repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

[tool.poetry]
packages = [
  { include = "{{ cookiecutter.namespace }}" }
]
include = ["LICENSE", "README.md"]
exclude = ["contrib", "docs", "test*"]

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.dev.dependencies]
build = "1.2.1"
bump2version = "1.0.1"
coverage = "7.4.4"
cruft = "2.15.0"
faker = "24.8.0"
pre-commit = "3.7.0"
pytest = "8.1.1"
pytest-cov = "5.0.0"
pytest-deadfixtures = "2.2.1"
pytest-mock = "3.14.0"

[tool.poetry.group.docs.dependencies]
myst-parser = "2.0.0"
Sphinx = "7.2.6"
sphinx-rtd-theme = "2.0.0"


[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
addopts = "--doctest-modules"


[tool.ruff]
select = ["E", "F", "I"]
ignore = ["E501"]
line-length = 88
